# azure-devsecops-aca

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  SECURITY.md  checkov.yml  docker-compose.yml  pyproject.toml  readme.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: deploy_summary.py  format_aca_logs.py
.github/workflows/: app-deploy.yml  ci.yml  deploy.yml  destroy.yml  infra-only.yml  keda-scale-test.yml
app/: requirements-common.txt
app/api/: Dockerfile  dashboard.html  file_scanner.html  main.py  (+4 more)
docs/: README.md  api-usage.md  azure-logging-guide.md  cicd-workflows.md  configuration-reference.md  presentation.md  structured-logging-and-tracing.md  terraform-local.md  threat-model.md
infra/: .terraform.lock.hcl  apps.tf  core.tf  keyvault.tf  main.tf  monitoring.tf  moved.tf  outputs.tf  variables.tf  webpubsub.tf
scripts/: aca  aca_api.py  aca_api.sh  docker_cleanup.sh  keda_scale_test.sh  send_servicebus_messages.py
tests/: test_aca_cli.py  test_api_auth.py  test_api_endpoints.py  test_api_keys.py  test_clamav_client.py  test_config.py  test_errors.py  test_fetcher_telemetry.py  test_job_index.py  test_limits.py  test_live_updates.py  test_logging_config.py  test_message_consumer.py  test_scan_messages.py  test_telemetry_config.py  test_url_canonicalization.py  test_url_dedupe.py  test_url_heuristics_rules.py  test_url_validation.py  test_web_analysis.py  test_worker_artifact_integrity.py  test_worker_telemetry.py
(+88 files in other folders)
