[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aca-cli"
version = "1.0.0"
description = "CLI for the Azure DevSecOps ACA scanner API"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.0"]

[project.scripts]
aca = "aca_cli.bootstrap:main"
aca-api = "aca_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
