[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aca-cli"
dynamic = ["version"]
description = "CLI for the Azure DevSecOps ACA scanner API"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.0"]

[project.scripts]
aca = "aca_cli.bootstrap:main"
aca-api = "aca_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aca_cli._version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["app", "app/api", "app/worker", "src"]
testpaths = ["tests"]
